# langchain_basics

./: .gitignore  README.md  pyproject.toml
docs/: runnables.md
notebooks/03_chains/: basic.py
notebooks/04_rag/: practice_rag_on_gen_ai.py  rag_basic.py
notebooks/05_agent_n_tools/: current_time_agent.py
notebooks/agent_n_tools/: practice.py
notebooks/agent_n_tools/agents/: google_chat_agent.py  wiki_chat_agent.py
notebooks/chains/: runnables.py  test.py  under_the_hood.py
notebooks/chat_model/: basic_chat.py
old/notebooks/02_prompts/: basic_prompt.py
old/notebooks/03_chains/: practice_runnable.py
old/notebooks/04_rag/: things_important_in_rag.py
old/notebooks/05_agent_n_tools/agents/: gc.py
old/notebooks/utils/: chat_ui.py
